# SensorStation

./: CMakeLists.txt  README.md
doxygen_test/: Doxyfile
doxygen_test/html/: BusinessHandler_8cpp.html  BusinessHandler_8cpp__incl.map  BusinessHandler_8cpp__incl.md5  BusinessHandler_8cpp_source.html  BusinessHandler_8h.html  BusinessHandler_8h__dep__incl.map  BusinessHandler_8h__dep__incl.md5  BusinessHandler_8h__incl.map  BusinessHandler_8h__incl.md5  BusinessHandler_8h_source.html  CMakeCCompilerId_8c.html  CMakeCCompilerId_8c_source.html  CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8cpp_source.html  CMakeLists_8txt.html  ConfigReader_8cpp.html  ConfigReader_8cpp__incl.map  ConfigReader_8cpp__incl.md5  ConfigReader_8cpp_source.html  ConfigReader_8h.html  ConfigReader_8h__dep__incl.map  ConfigReader_8h__dep__incl.md5  ConfigReader_8h__incl.map  ConfigReader_8h__incl.md5  ConfigReader_8h_source.html  README_8md.html  Saver_8cpp.html  Saver_8cpp__incl.map  Saver_8cpp__incl.md5  Saver_8cpp_source.html  Saver_8h.html  Saver_8h__dep__incl.map  Saver_8h__dep__incl.md5  Saver_8h__incl.map  Saver_8h__incl.md5  Saver_8h_source.html  UDPUnicast_8cpp.html  UDPUnicast_8cpp__incl.map  UDPUnicast_8cpp__incl.md5  UDPUnicast_8cpp_source.html  (+52 more)
doxygen_test/latex/: BusinessHandler_8cpp.tex  BusinessHandler_8cpp__incl.md5  BusinessHandler_8cpp_source.tex  BusinessHandler_8h.tex  (+44 more)
include/: BusinessHandler.h  ConfigReader.h  Saver.h  UDPUnicast.h
src/: BusinessHandler.cpp  ConfigReader.cpp  Saver.cpp  UDPUnicast.cpp  main.cpp
testing/: simulator_unicast.py  test_unicast.py
(+28 files in other folders)
